--- a/nagioslin.html
+++ b/nagioslin.html
@@ -16,7 +16,7 @@
 <p class="conthead">Nagios. Мониторинг Linux-хоста</p>
 <hr class="contline">
 <div class="contlead">
-<p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Подключение Linux-хоста к серверу Nagios Core.<br>
+<p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Nagios, часть 2 - Подключение Linux-хоста к серверу Nagios Core.<br>
 <span class="contdate">Дата:&nbsp;&nbsp;</span>Сентябрь 2022.&nbsp;&nbsp;<span class="contdate">Обновление:&nbsp;&nbsp;</span>Сентябрь 2023.<br>
 <span class="contdate">Статус статьи:&nbsp;&nbsp;</span>pg_stat.</p>
 </div><br>
