--- a/nagiosrpi.html
+++ b/nagiosrpi.html
@@ -16,7 +16,7 @@
 <p class="conthead"><b>Nagios. Установка на Debian 11</b></p>
 <hr class="contline">
 <div class="contlead">
-<p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Установка Nagios Core 4.x на Debian 11 Bullseye.<br>
+<p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Nagios, часть 1 - Установка Nagios Core 4.x на Debian 11 Bullseye.<br>
 <span class="contdate">Дата:&nbsp;&nbsp;</span>Октябрь 2017.&nbsp;&nbsp;<span class="contdate">Обновление:&nbsp;&nbsp;</span>Июнь 2023.<br>
 <span class="contdate">Статус статьи:&nbsp;&nbsp;</span>pg_stat.</p></div><br>
 <div class="conttext">
