--- a/nagioslin.html
+++ b/nagioslin.html
@@ -106,7 +106,8 @@ command[check_apt]=/usr/local/nagios/libexec/check_apt</div>
 <p>Скачаем и распакуем дополнительные плагины:</p>
 <div class="messtext">
 <p>$ <span class="textcopy">wget srv_addr/storage/nagios/nagios-custom-plugins.tar.gz</span><br>
-$ <span class="textcopy">tar -xf nagios-custom-plugins.tar.gz</span></p>
+$ <span class="textcopy">tar -xf nagios-custom-plugins.tar.gz</span><br>
+$ <span class="textcopy">cd nagios-custom-plugins/</span></p>
 </div>
 <p>Дадим права и переместим в папку плагинов:</p>
 <div class="messtext">
