--- a/megaraid.html
+++ b/megaraid.html
@@ -21,7 +21,8 @@
 <span class="contdate">Статус статьи:&nbsp;&nbsp;</span>pg_stat.</p>
 </div><br>
 <div class="conttext">
-<p>В данной статье рассматривается настройка мониторинга контроллера MegaRAID при помощи&nbsp;&nbsp;<span class="textmark">megacli</span> на ОС Debian 11 Bullseye.</p>
+<p>В этой статье рассматривается настройка мониторинга контроллера MegaRAID при помощи утилиты <span class="textmark">megacli</span> на ОС Debian 11 Bullseye.</p>
+<p><span class="textmark">MegaCli</span> &ndash; это утилита командной строки благодаря которой можно производить любые настройки RAID-контролеров производителя LSI/Avago.</p>
 <p>Скачаем и установим пакет megacli:</p>
 <div class="messtext">
 <p># <span class="textcopy">wget srv_addr/storage/megaraid/megacli_8.07.14-3+Debian.11.bullseye_amd64.deb</span><br>
