--- a/megaraid.html
+++ b/megaraid.html
@@ -17,7 +17,7 @@
 <hr class="contline">
 <div class="contlead">
 <p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Nagios, часть 3 - Мониторинг контроллера MegaRAID.<br>
-<span class="contdate">Дата:&nbsp;&nbsp;</span>Сентябрь 2023.<br>
+<span class="contdate">Дата:&nbsp;&nbsp;</span>Октябрь 2023.<br>
 <span class="contdate">Статус статьи:&nbsp;&nbsp;</span>pg_stat.</p>
 </div><br>
 <div class="conttext">
@@ -26,7 +26,7 @@
 <p>После подключения Linux-хоста к серверу Nagios, описанного в предыдущей <a href="/pages/nagioslin.php" class="textlink">статье</a>, добавим проверку контроллера MegaRAID.</p>
 <p>Скачаем и установим пакет megacli:</p>
 <div class="messtext">
-<p># <span class="textcopy">wget srv_addr/storage/megaraid/megacli_8.07.14-3+Debian.11.bullseye_amd64.deb</span><br>
+<p># <span class="textcopy">wget srv_addr/storage/megaraid/\<br>megacli_8.07.14-3+Debian.11.bullseye_amd64.deb</span><br>
 # <span class="textcopy">dpkg -i megacli_8.07.14-3+Debian.11.bullseye_amd64.deb</span></p>
 </div>
 <p>Далее скачаем, распакуем и скопируем плагин в папку с остальными плагинами:</p>
