--- a/nfsdebian.html
+++ b/nfsdebian.html
@@ -49,6 +49,30 @@
 </p></div>
 <p>В данном случае коталог <span class="textmark">shared</span> мы экспортируем для всей подсети, а каталог <span class="textmark">folder</span> &ndash; только для хоста с конкретным ip-адресом.</p>
 <p>А теперь подробнее о параметрах экспорта.</p>
+<p><span class="textmark"><b>rw</b></span> &ndash; доступ разрешён как на чтение, так и на запись;<br>
+<span class="textmark"><b>ro</b></span> &ndash; доступ разрешён только на чтение;<br>
+<span class="textmark"><b>sync</b> (по умолчанию)</span> &ndash; сервер будет отвечать на запросы только после записи изменений на диск, выполненных этими запросами;<br>
+<span class="textmark"><b>async</b></span> &ndash; сервер будет продолжать обслуживание клиентов ещё до окончания действия предыдущей команды на запись. Параметр <b>async</b> увеличивает быстродействие, но при этом повышает риск потери информации в случае обрыва соединения или отказа оборудования;<br>
+<span class="textmark"><b>subtree_check</b></span> &ndash; параметр установки проверки, находится ли запрошенный файл в экспортированном подкаталоге;<br>
+<span class="textmark"><b>no_subtree_check</b></span> &ndash; параметр отключения проверки нахождения файла в подкаталоге. Уменьшает безопасность, но увеличивает скорость передачи данных;<br>
+<span class="textmark"><b>secure</b> (по умолчанию)</span> &ndash; для соединения NFS будут использоваться порты с номером ниже 1024;<br>
+<span class="textmark"><b>insecure</b></span> &ndash; разрешение любых портов для соединения NFS. Подключение с защищённых (< 1024) портов используется, чтобы программа без прав <b>root</b> не могла монтировать иерархию подкаталогов;<br>
+<span class="textmark"><b>auth_nlm</b></span>, <span class="textmark"><b>no_auth_nlm</b></span> или <span class="textmark"><b>secure_locks</b></span>, <span class="textmark"><b>insecure_locks</b></span> &ndash; установка требования авторизации запросов на блокировку;<br>
+<span class="textmark"><b>wdelay</b></span> &ndash; установка задержки записи на диск;<br>
+<span class="textmark"><b>no_wdelay</b></span> &ndash; отключение задержки. Этот параметр не действует при включённой опции <b>async</b>;<br>
+В нормальном состоянии NFS-сервер немного задерживает запись на диск, если уже ведётся запись или ожидается поступление запроса на запись. Это позволяет запустить несколько процессов записи на диск с помощью одной команды, что увеличивает производительность. Однако, если NFS-сервер получает в основном мелкие, не связанные между собой, запросы, то стандартное поведение может снизить производительность, поэтому доступна опция <b>no_wdelay</b> чтобы отключить задержку перед записью.<br>
+<span class="textmark"><b>hide</b></span> &ndash; установка экспорта вложенных подкаталогов. В случае, когда экспортируются две директории, одна из которых вложенная, при монтировании только родительской директории вложенная будет видна как пустая;<br>
+<span class="textmark"><b>nohide</b></span> &ndash; отмена <b>hide</b>. Стоит учесть, что данный параметр работает только для экспортирования по конкретному ip-адресу;<br>
+<span class="textmark"><b>crossmnt</b></span> &ndash; данный параметр похож на параметр <b>nohide</b>, только он делает возможным для клиентов переходить из файловой системы, отмеченой параметром <b>crossmnt</b> в экспортированную файловую систему, смонтированную в ней. То есть когда вложенная файловая система "B" смонтирована внутри файловой системы "A", установка параметра <b>crossmnt</b> для "A" имеет тот же эффект, как установка параметра <b>nohide</b> для "B";<br>
+<span class="textmark"><b>fsid=num|root|uuid</b></span> &ndash; NFS необходимо идентифицировать каждую файловую систему, которую она экспортирует. Обычно используется UUID. Однако ядра Linux ниже 2.6.20 не понимают UUID. Также могут быть экспортированы несколько ресурсов с одного устройства UUID. Поэтому иногда следует явно устанавливать данный параметр. Для корневого устройства <b>fsid</b> может быть задан как <b>fsid=root</b> или <b>fsid=0</b>;<br>
+<span class="textmark"><b></b></span> &ndash; ;<br>
+<span class="textmark"><b></b></span> &ndash; ;<br>
+<span class="textmark"><b></b></span> &ndash; ;<br>
+<span class="textmark"><b></b></span> &ndash; ;<br>
+<span class="textmark"><b></b></span> &ndash; ;<br>
+<span class="textmark"><b></b></span> &ndash; ;<br>
+
+</p>
 
 
 
