--- a/nfsdebian.html
+++ b/nfsdebian.html
@@ -48,7 +48,14 @@
 /mnt/folder&nbsp;&nbsp;&nbsp;&nbsp;172.16.0.21/24(rw,sync,no_root_squash,no_subtree_check)
 </p></div>
 <p>В данном случае коталог <span class="textmark">shared</span> мы экспортируем для всей подсети, а каталог <span class="textmark">folder</span> &ndash; только для хоста с конкретным ip-адресом.</p>
+<p>Экспортируем каталоги и перезапустим сервис NFS-сервера:</p>
+<div class="messtext"><p>
+# <span class="textcopy">exportfs -a</span><br>
+# <span class="textcopy">systemctl restart nfs-kernel-server</span>
+</p></div>
 <p>А теперь подробнее о параметрах экспорта.</p>
+<a name="nfssetting"></a><p style="font-size: 1px">&nbsp;</p>
+<p class="contsubs">Параметры экспорта</p>
 <p><span class="textmark"><b>rw</b></span> &ndash; доступ разрешён как на чтение, так и на запись;<br>
 <span class="textmark"><b>ro</b></span> &ndash; доступ разрешён только на чтение;<br>
 <span class="textmark"><b>sync</b> (по умолчанию)</span> &ndash; сервер будет отвечать на запросы только после записи изменений на диск, выполненных этими запросами;<br>
@@ -65,14 +72,13 @@
 <span class="textmark"><b>nohide</b></span> &ndash; отмена <b>hide</b>. Стоит учесть, что данный параметр работает только для экспортирования по конкретному ip-адресу;<br>
 <span class="textmark"><b>crossmnt</b></span> &ndash; данный параметр похож на параметр <b>nohide</b>, только он делает возможным для клиентов переходить из файловой системы, отмеченой параметром <b>crossmnt</b> в экспортированную файловую систему, смонтированную в ней. То есть когда вложенная файловая система "B" смонтирована внутри файловой системы "A", установка параметра <b>crossmnt</b> для "A" имеет тот же эффект, как установка параметра <b>nohide</b> для "B";<br>
 <span class="textmark"><b>fsid=num|root|uuid</b></span> &ndash; NFS необходимо идентифицировать каждую файловую систему, которую она экспортирует. Обычно используется UUID. Однако ядра Linux ниже 2.6.20 не понимают UUID. Также могут быть экспортированы несколько ресурсов с одного устройства UUID. Поэтому иногда следует явно устанавливать данный параметр. Для корневого устройства <b>fsid</b> может быть задан как <b>fsid=root</b> или <b>fsid=0</b>;<br>
-<span class="textmark"><b></b></span> &ndash; ;<br>
-<span class="textmark"><b></b></span> &ndash; ;<br>
-<span class="textmark"><b></b></span> &ndash; ;<br>
-<span class="textmark"><b></b></span> &ndash; ;<br>
-<span class="textmark"><b></b></span> &ndash; ;<br>
-<span class="textmark"><b></b></span> &ndash; ;<br>
-
-</p>
+<b>nfsd</b> основывает свой доступ к файлами сервера на <b>gid</b> и <b>uid</b>, предоставляемых в каждом NFS RPC запросе. По привычке пользователь будет ожидать, что он может получить доступ к своим файлам на сервере как к обычной файловой системе. Это требует того, чтобы одни и те же <b>gid</b> и <b>uid</b> использовались на клиентской и серверной машинах. Это не всегда верно или не всегда желательно. Очень часто не желательно, чтобы пользователь <b>root</b> на клиентской машине также воспринимался как <b>root</b> при доступе к файлам на NFS-сервере. Чтобы это предотвратить <b>uid=0</b> обычно подменяется другим <b>id</b> &ndash; так называемым "анонимом" или <b>nobody</b>. Этот тип поведения (который и называется "root squashing") применяется по умолчанию и может быть отключён параметром <b>no_root_squash</b>. По умолчанию, <b>exportfs</b> использует <b>uid/gid</b> с номером 65534 для доступа с подменой. Эти значения могут быть изменены параметрами <b>anonuid</b> и <b>anongid</b>. Наконец, можно подменить все пользовательские запросы на анонимные с помощью параметра <b>all_squash</b>.<br>
+<span class="textmark"><b>root_squash</b></span> &ndash; подмена запросов от пользователя с <b>uid/gid = 0 (root)</b> на анонимные <b>uid/gid</b>, либо на пользователя, заданного в параметре <b>anonuid/anongid</b>;<br>
+<span class="textmark"><b>no_root_squash</b></span> &ndash; запрет подмены <b>uid/gid</b> для суперпользователя (root). Этот параметр используется в основном для бездисковых клиентских машин;<br>
+<span class="textmark"><b>all_squash</b></span> &ndash; подмена запросов от ВСЕХ пользователей (не только root) на анонимного <b>uid/gid</b>, либо на пользователя, заданного в параметре <b>anonuid/anongid</b>. Используется обычно для публичного экспорта директорий;<br>
+<span class="textmark"><b>no_all_squash</b></span> &ndash; запрет подмены <b>uid/gid</b> от всех пользователей;<br>
+<span class="textmark"><b>anonuid=UID</b></span> и <span class="textmark"><b>anongid=GID</b></span> &ndash; (явная) установка <b>UID/GID</b> для анонимного пользователя. Параметр может быть полезен тогда, когда какая-либо директория экспортируется для конкретного пользователя, заведённого в системе;<br>
+<span class="textmark"><b>map_static=/etc/file_maps_users</b></span> &ndash; установка использования файла, в котором задаётся сопоставление удаленных <b>UID/GID</b> локальным <b>UID/GID</b>.</p>
 
 
 
