--- a/nfsdebian.html
+++ b/nfsdebian.html
@@ -16,7 +16,7 @@
 <p class="conthead">NFS-сервер. Установка и использование</p>
 <hr class="contline">
 <div class="contlead">
-<p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Установка, настройка и примеры использования простого NFS-сервера.<br>
+<p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Установка, настройка и примеры использования NFS-сервера.<br>
 <span class="contdate">Дата:&nbsp;&nbsp;</span>Октябрь 2023.<br>
 <span class="contdate">Статус статьи:&nbsp;&nbsp;</span>pg_stat.</p>
 </div><br>
