--- a/nfsdebian.html
+++ b/nfsdebian.html
@@ -101,8 +101,9 @@ $ <span class="textcopy">sudo nano /etc/fstab</span>
 </p></div>
 <p>Добавив в конец следующую запись:</p>
 <div class="messfile textcopy">
-<p>172.16.0.10:/mnt/shared /mnt/nsf-shared nfs default 0 0</p>
+<p>172.16.0.10:/mnt/shared /mnt/nsf-shared nfs defaults 0 0</p>
 </div></div>
+
 <!-- END OF CONTENT -->
 
 </div></div></div></div>
